--- a/css/responsive/index.css
+++ b/css/responsive/index.css
@@ -68,6 +68,18 @@
 
 @media (max-width: 800px) {
 
+    /* Section 3 */
+    section:nth-of-type(3)>div>#news>.news-card {
+        height: 25vw;
+    }
+
+    section:nth-of-type(3)>div>#news>.news-card>img {
+        border-radius: 15px;
+        object-fit: cover;
+        height: 25vw;
+        width: 25vw;
+    }
+
     /* Footer */
     footer>#socials {
         margin-bottom: 50px;
