--- a/css/responsive/stylesheet.css
+++ b/css/responsive/stylesheet.css
@@ -8,5 +8,17 @@
     :root {
         --main-side-padding: 10px;
     }
-}@media (max-width: 1000px) {
+
+    h1 {
+        font-size: 1.8rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    a,
+    p {
+        font-size: 0.8rem;
+    }
 }
